Rewrite README around HunterCore deployment